--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
     transform: translateY(-50%);
     width: clamp(150px, 25vw, 300px);
     height: clamp(150px, 25vw, 300px);
-    background-image: url('images/snoopy-peek-wall.gif');
+    background-image: url('media/snoopyPeek.gif');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: left center;
